# libpak

./: .gitignore  .gitmodules  CMakeLists.txt  libpak.h
include/: libpak.h  libpakExport.h
src/: compressor.c  decompressor.c  reader.c
test/: CMakeLists.txt  b.txt  libpaktest.c  paktest.c
